// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reducer Package Data should package data correctly 1`] = `
Object {
  "entities": Object {
    "Skill": Object {
      "1": Object {
        "id": 1,
        "power": 5,
        "target": 1,
      },
      "2": Object {
        "id": 2,
        "power": 2,
        "target": 2,
      },
    },
    "User": Object {
      "1": Object {
        "age": undefined,
        "friends": Array [
          2,
          3,
        ],
        "id": 1,
        "name": "Alan",
      },
      "2": Object {
        "age": undefined,
        "friends": Array [
          3,
        ],
        "id": 2,
        "name": "Antoine",
      },
      "3": Object {
        "age": 28,
        "friends": undefined,
        "id": 3,
        "name": "Joffrey",
      },
    },
  },
  "queries": Object {},
}
`;

exports[`Reducer Remove Data should remove several data 1`] = `
Immutable.Map {
  entities: Immutable.Map {
    User: Immutable.Map {
      2: Immutable.Map {
        id: 2,
        name: "Joffrey",
      },
    },
    Skill: Immutable.Map {
      1: Immutable.Map {
        id: 1,
        power: 2,
      },
    },
  },
}
`;

exports[`Reducer Remove Data shouldn't crash if no data exists 1`] = `
Object {
  "entities": Object {},
  "queries": Object {},
}
`;

exports[`Reducer accepts queries 1`] = `
Object {
  "entities": Object {
    "Skill": Object {
      "1": Object {
        "id": 1,
        "power": 5,
        "target": undefined,
      },
      "2": Object {
        "id": 2,
        "power": 2,
        "target": 2,
      },
    },
    "User": Object {
      "2": Object {
        "age": undefined,
        "friends": Array [
          3,
        ],
        "id": 2,
        "name": "Antoine",
      },
      "3": Object {
        "age": 28,
        "friends": undefined,
        "id": 3,
        "name": "Joffrey",
      },
    },
  },
  "queries": Object {
    "queryhash": Object {
      "results": Object {
        "byEntity": Object {},
        "byQuery": Object {
          "skills": Array [
            1,
            2,
          ],
          "users": "2",
        },
      },
    },
  },
}
`;

exports[`Reducer should accept only one data 1`] = `
Object {
  "entities": Object {
    "User": Object {
      "2": Object {
        "age": undefined,
        "friends": undefined,
        "id": "2",
        "name": undefined,
      },
    },
  },
  "queries": Object {},
}
`;
